--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "antd": "^5.10.2",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0"
